# NewComAir

./: .gitignore  CMakeLists.txt  README.md
dumpmem/: CMakeLists.txt
dumpmem/include/: ParseRecord.h  SharedMemReader.h
dumpmem/src/: MemDumper.cpp  ParseRecord.cpp  SharedMemReader.cpp  close_shmem.c
include/Common/: ArrayLinkedIndentifier.h  LocateInstrument.h  MonitorRWInsts.h  Search.h
include/Random/: Random.h
lib/: CMakeLists.txt
lib/Common/: ArrayLinkedIndentifier.cpp  CMakeLists.txt  Helper.cpp  LocateInstrument.cpp  MonitorRWInsts.cpp  Search.cpp
lib/IDAssigner/: IDTagger.cpp
lib/LoopSampler/: CMakeLists.txt
lib/Random/: CMakeLists.txt  Random.cpp
runtime/: CMakeLists.txt
runtime/005-loop-sample/: Makefile  aproflib.c  aproflib.h
runtime/Random/: CMakeLists.txt  Random.c  Random.h
runtime/Shmem/: CMakeLists.txt  Shmem.c  Shmem.h
runtime/include/: Shmem.h
runtime/src/: CMakeLists.txt  Random.c  Shmem.c
stubs/: Makefile  Makefile.O2  Makefile.clonesample  Makefile.clonesample.O2  Makefile.empty  README.md  clean.sh  exe_time.clonesample.csv  exe_time.csv  exe_time.empty.csv  exe_time.lalls.csv  exe_time.new.csv  run_exe_time.py
stubs/apache29743/: Makefile  run.py
stubs/apache34464/: Makefile  Makefile.clonesample  Makefile.clonesample.O2  Makefile.clonesample.indvar  Makefile.nopass  Makefile.old  README.md  result  run.py  run_exe_time.py
stubs/apache37184/: Makefile  run.py
stubs/apache47223/: Makefile  run.py
stubs/inputs/: input_case_10500.txt  input_case_11000.txt  input_case_11500.txt  input_case_12000.txt  (+89 more)
(+62 files in other folders)
